Update index.html [0.5.01]
Behebung
- Bilder
- Links

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       </div>
       <a href="bewerben.html" class="hero-cta">Jetzt bewerben</a>
       <div>
-        <a href="https://discord.gg/yourdiscord" target="_blank" class="hero-discord">
+        <a href="https://discord.gg/qsM4tbsKv4" target="ParadiseNetwork.us Discord" class="hero-discord">
           <span style="vertical-align:middle;">Discord beitreten</span>
         </a>
       </div>
       <div style="margin-top:2rem;">
-        <img src="/bild/paradi_tower.png" alt="ParadiseNetwork Screenshot" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+        <img src="bild/paradi_tower.png" alt="ParadiseNetwork Titelscreen" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
       </div>
     </section>
 
@@ -70,7 +70,7 @@
         <li class="feature-item">🌐 Java 1.21</li>
       </ul>
       <div style="margin-top:2rem;">
-        <img src="/bild/paradi_gunter.png" alt="ParadiseNetwork Screenshot" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+        <img src="bild/paradi_gunter.png" alt="ParadiseNetwork Screenshot" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
       </div>
     </section>
 
