Update galerie.html [V0.5.01]
- Bildfehler behoben

--- a/galerie.html
+++ b/galerie.html
@@ -166,30 +166,30 @@
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="/bild/paradi_tower.png" alt="Startbild 1" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 2" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 3" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 4" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 5" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 6" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 7" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 8" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 9" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 10" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 11" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 12" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 13" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 14" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 15" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 16" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 17" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 18" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 19" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 20" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 21" data-folder="2023">
-            <img src="/bild/paradi_tower.png" alt="Startbild 22" data-folder="2023">
-            <img src="/bild/paradi_plant.png" alt="Startbild 23" data-folder="2023">
-            <img src="/bild/paradi_gunter.png" alt="Startbild 24" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 1" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 2" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 3" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 4" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 5" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 6" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 7" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 8" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 9" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 10" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 11" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 12" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 13" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 14" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 15" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 16" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 17" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 18" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 19" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 20" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 21" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 22" data-folder="2023">
+            <img src="bild/paradi_plant.png" alt="Startbild 23" data-folder="2023">
+            <img src="bild/paradi_gunter.png" alt="Startbild 24" data-folder="2023">
           </div>
         </div>
       </div>
@@ -200,8 +200,8 @@
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="https://cdn.pixabay.com/photo/2017/01/22/19/20/minecraft-2007955_1280.jpg" alt="Bauwerk 1" data-folder="2024">
-            <img src="https://cdn.pixabay.com/photo/2017/01/22/19/20/minecraft-2007955_1280.jpg" alt="Bauwerk 2" data-folder="2024">
+            <img src="Bildplatz" alt="Bauwerk 1" data-folder="2024">
+            <img src="Bildplatz" alt="Bauwerk 2" data-folder="2024">
           </div>
         </div>
       </div>
@@ -212,8 +212,8 @@
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="https://cdn.pixabay.com/photo/2017/02/01/22/02/minecraft-2038872_1280.png" alt="Event 1" data-folder="2025">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/09/32/minecraft-1868284_1280.jpg" alt="Event 2" data-folder="2025">
+            <img src="Bildplatz" alt="Event 1" data-folder="2025">
+            <img src="Bildplatz" alt="Event 2" data-folder="2025">
           </div>
         </div>
       </div>
