Update galerie.html [V0.5.01]
Fehlerbehebung
- Bildfehler

--- a/galerie.html
+++ b/galerie.html
@@ -159,61 +159,61 @@
     </section>
 
     <div class="gallery-folder-list">
-      <div class="gallery-folder" data-folder="2023">
+      <div class="gallery-folder" data-folder="galerie-1">
         <button class="gallery-folder-header" type="button">
           <span>Galerie 1</span>
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="bild/paradi_tower.png" alt="Startbild 1" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 2" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 3" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 4" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 5" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 6" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 7" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 8" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 9" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 10" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 11" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 12" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 13" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 14" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 15" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 16" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 17" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 18" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 19" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 20" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 21" data-folder="2023">
-            <img src="bild/paradi_tower.png" alt="Startbild 22" data-folder="2023">
-            <img src="bild/paradi_plant.png" alt="Startbild 23" data-folder="2023">
-            <img src="bild/paradi_gunter.png" alt="Startbild 24" data-folder="2023">
+            <img src="bild/paradi_tower.png" alt="Startbild 1" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 2" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 3" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 4" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 5" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 6" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 7" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 8" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 9" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 10" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 11" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 12" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 13" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 14" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 15" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 16" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 17" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 18" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 19" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 20" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 21" data-folder="galerie-1">
+            <img src="bild/paradi_tower.png" alt="Startbild 22" data-folder="galerie-1">
+            <img src="bild/paradi_plant.png" alt="Startbild 23" data-folder="galerie-1">
+            <img src="bild/paradi_gunter.png" alt="Startbild 24" data-folder="galerie-1">
           </div>
         </div>
       </div>
-      <div class="gallery-folder" data-folder="2024">
+      <div class="gallery-folder" data-folder="galerie-2">
         <button class="gallery-folder-header" type="button">
           <span>Galerie 2</span>
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="Bildplatz" alt="Bauwerk 1" data-folder="2024">
-            <img src="Bildplatz" alt="Bauwerk 2" data-folder="2024">
+            <img src="Bildplatz" alt="Bauwerk 1" data-folder="galerie-2">
+            <img src="Bildplatz" alt="Bauwerk 2" data-folder="galerie-2">
           </div>
         </div>
       </div>
-      <div class="gallery-folder" data-folder="2025">
+      <div class="gallery-folder" data-folder="galerie-3">
         <button class="gallery-folder-header" type="button">
           <span>Galerie 3</span>
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
           <div class="gallery-images">
-            <img src="Bildplatz" alt="Event 1" data-folder="2025">
-            <img src="Bildplatz" alt="Event 2" data-folder="2025">
+            <img src="Bildplatz" alt="Event 1" data-folder="galerie-3">
+            <img src="Bildplatz" alt="Event 2" data-folder="galerie-3">
           </div>
         </div>
       </div>
