--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -87,31 +87,31 @@
       <h2>Unser Team</h2>
       <div class="team-list">
         <div class="team-member">
-          <img src="/bild/team/derder96.png" alt="derder96">
+          <img src="bild/team/derder96.png" alt="derder96">
           <h3>derder96</h3>
           <div class="role">Owner</div>
           <p>Dein Text</p>
         </div>
         <div class="team-member">
-          <img src="/bild/team/HoChilli.jpg" alt="HoChilli">
+          <img src="bild/team/HoChilli.jpg" alt="HoChilli">
           <h3>HoChilli</h3>
           <div class="role">Co-Owner</div>
           <p>Dein Text</p>
         </div>
         <div class="team-member">
-          <img src="/bild/team/leonie.jpg" alt="Leonie">
+          <img src="bild/team/leonie.jpg" alt="Leonie">
           <h3>Leonie</h3>
           <div class="role">Co-Owner</div>
           <p>Dein Text</p>
         </div>
         <div class="team-member">
-          <img src="/bild/team/olfialex.png" alt="OlfiAlex">
+          <img src="bild/team/olfialex.png" alt="OlfiAlex">
           <h3>OlfiAlex</h3>
           <div class="role">Test-Developer</div>
           <p>Dein Text</p>
         </div>
         <div class="team-member">
-          <img src="/bild/team/xtedary.png" alt="xTedary">
+          <img src="bild/team/xtedary.png" alt="xTedary">
           <h3>xTedary</h3>
           <div class="role">Supporter</div>
           <p>Dein Text</p>
@@ -121,7 +121,7 @@
     <!-- ...weitere Abschnitte wie Geschichte, Werte etc... -->
     <section class="card">
       <h2>Die Geschichte von ParadiseNetwork</h2>
-      <p>Serverstory möööööp.</p>
+      <p>Hier steht bald die Sagen umwobene Geschichte von ParadiseNetwork...</p>
       <!-- Teamvorstellung, Geschichte, Werte etc. -->
     </section>
   </main>
