Update karte.html [V0.5.01]
Fehlerbehebung Versuch 1
- Livemap

--- a/karte.html
+++ b/karte.html
@@ -28,7 +28,7 @@
   <main>
     <section class="card">
       <h2>Live Karte</h2>
-      <iframe src="http://paradisenetwork.us:19132/" width="100%" height="600" style="border:none;"></iframe>
+      <iframe src="https://paradisenetwork.us:19132/" width="100%" height="600" style="border:none;"></iframe>
     </section>
   </main>
   <footer>
