--- a/karte.html
+++ b/karte.html
@@ -27,9 +27,11 @@
   </nav>
   <main>
     <section class="card">
-      <h2>Live Karte</h2>
-      <iframe src="https://paradisenetwork.us:19132/" width="100%" height="600" style="border:none;"></iframe>
-    </section>
+  <h2>Live Karte</h2>
+  <p>Die Livemap kann derzeit aus Sicherheitsgründen nicht direkt hier angezeigt werden. Klicke unten, um sie in einem neuen Tab zu öffnen.</p>
+  <a href="http://paradisenetwork.us:19132/" target="_blank" class="hero-cta">Livemap öffnen</a>
+</section>
+
   </main>
   <footer>
     <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
