Update bewerben.html [V0.5.01]
Fehlerbehebung
- Discordlink aktuallisiert

--- a/bewerben.html
+++ b/bewerben.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bewerben – ParadiseNetwork.us</title>
-  <!-- ...kopiere den <style>-Block aus index.html... -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -38,7 +37,7 @@
         <a href="https://forms.gle/uAooCDtobAUPxabNA" target="_blank" class="hero-cta" style="min-width:200px;">Content Creator</a>
       </div>
       <p style="margin-top:2rem;">Alle Bewerbungen werden vertraulich behandelt. Wir melden uns zeitnah bei dir!</p>
-      <p>Für Fragen oder weitere Infos nutze gerne unseren <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>.</p>
+      <p>Für Fragen oder weitere Infos nutze gerne unseren <a href="https://discord.gg/qsM4tbsKv4" target="_blank">Discord</a>.</p>
     </section>
   </main>
   <footer>
