Update creator.html [V0.5.01]
Fehlerbehebung
- Links aktuallisiert

--- a/creator.html
+++ b/creator.html
@@ -107,47 +107,47 @@
       <h2>Unsere Creator</h2>
       <div class="creator-list">
         <div class="creator-card">
-          <img src="/bild/team/coro.png" alt="Corotexus">
+          <img src="bild/team/coro.png" alt="Corotexus">
           <h3>Corotexus</h3>
           <div class="desc"> In vielen Dimensionen unterwegs und </div>
           <div class="creator-links">
-            <a href="https://youtube.com/@MaxYT" target="_blank" class="creator-link-btn youtube">YouTube</a>
-            <a href="https://tiktok.com/@maxyt" target="_blank" class="creator-link-btn tiktok">TikTok</a>
-            <a href="https://twitch.tv/maxyt" target="_blank" class="creator-link-btn twitch">Twitch</a>
+            <a href="https://www.youtube.com/channel/UCreXR_YqWRJHpOzNcppIczA" target="_blank" class="creator-link-btn youtube">YouTube</a>
+            <a href="https://vm.tiktok.com/ZMe9MSWRP/" target="_blank" class="creator-link-btn tiktok">TikTok</a>
+            <a href="https://www.twitch.tv/corotexus2" target="_blank" class="creator-link-btn twitch">Twitch</a>
           </div>
         </div>
         <div class="creator-card">
-          <img src="/bild/team/leandost.png" alt="Leandost">
+          <img src="bild/team/leandost.png" alt="Leandost">
           <h3>Leandost</h3>
           <div class="desc">Beschreibung</div>
           <div class="creator-links">
-            <a href="https://youtube.com/@LisaLive" target="_blank" class="creator-link-btn youtube">YouTube</a>
-            <a href="https://tiktok.com/@lisalive" target="_blank" class="creator-link-btn tiktok">TikTok</a>
-            <a href="https://twitch.tv/lisalive" target="_blank" class="creator-link-btn twitch">Twitch</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn youtube">YouTube</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn tiktok">TikTok</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn twitch">Twitch</a>
           </div>
         </div>
         <div class="creator-card">
-          <img src="/bild/creator/stevebuilds.jpg" alt="Creator 3">
+          <img src="bild/creator/stevebuilds.jpg" alt="Creator 3">
           <h3>Creator 3</h3>
           <div class="desc">Beschreibung</div>
           <div class="creator-links">
-            <a href="https://youtube.com/@SteveBuilds" target="_blank" class="creator-link-btn youtube">YouTube</a>
-            <a href="https://tiktok.com/@stevebuilds" target="_blank" class="creator-link-btn tiktok">TikTok</a>
-            <a href="https://twitch.tv/stevebuilds" target="_blank" class="creator-link-btn twitch">Twitch</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn youtube">YouTube</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn tiktok">TikTok</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn twitch">Twitch</a>
           </div>
         </div>
         <div class="creator-card">
-          <img src="/bild/creator/paulcraft.jpg" alt="Creator 4">
+          <img src="bild/creator/paulcraft.jpg" alt="Creator 4">
           <h3>Creator 4</h3>
           <div class="desc">Beschreibung</div>
           <div class="creator-links">
-            <a href="https://youtube.com/@PaulCraft" target="_blank" class="creator-link-btn youtube">YouTube</a>
-            <a href="https://tiktok.com/@paulcraft" target="_blank" class="creator-link-btn tiktok">TikTok</a>
-            <a href="https://twitch.tv/paulcraft" target="_blank" class="creator-link-btn twitch">Twitch</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn youtube">YouTube</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn tiktok">TikTok</a>
+            <a href="Noch Nichts" target="_blank" class="creator-link-btn twitch">Twitch</a>
           </div>
         </div>
         <div class="creator-card">
-          <img src="Nichts" alt="Bewerber">
+          <img src="Bewerber" alt="Bewerber">
           <h3>Hier könnte dein Name stehen!</h3>
           <div class="desc">Du möchtest auch Content Creator werden? Bewirb dich jetzt und werde Teil des Teams!</div>
           <div class="creator-links">
