--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <a href="https://discord.gg/qsM4tbsKv4" target="ParadiseNetwork.us Discord" class="hero-discord">
           <span style="vertical-align:middle;">Discord beitreten</span>
         </a>
+              <a href="https://corotexus-developement.github.io/ParadiseNetwork/index.html" target="_blank" style="display:inline-block; margin-bottom:1.2rem; font-weight:bold; color:#2a7ae2; text-decoration:underline;">Zum ParadiseNetwork-Wiki</a>
       </div>
       <div style="margin-top:2rem;">
         <img src="bild/paradi_tower.png" alt="ParadiseNetwork Titelscreen" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
