--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
     <section class="card" style="text-align:center;">
       <h3 style="margin-top:0;">Was erwartet dich?</h3>
       <ul class="feature-list">
+        </div>
+      <div style="margin-top:2rem;">
+        <img src="bild/Paradise.us_Animiertes_Banner.gif" alt="ParadiseNetwork Titelscreen" style="max-width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+      </div>
         <li class="feature-item">🏗️ Freebuild & Länder</li>
         <li class="feature-item">🎉 Events & Jobs</li>
         <li class="feature-item">🤝 Aktive Community & Team</li>
